--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/relativeLayout1">
+
         <EditText
-            android:layout_marginTop="100dp"
-            android:textAlignment="center"
+            android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/editText"/>
+            android:layout_marginTop="100dp"
+            android:textAlignment="center"
+            android:textColorLink="@color/colorPrimary" />
     </RelativeLayout>
 
     <RelativeLayout
