--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -12,7 +12,7 @@
         android:layout_height="59dp"
         android:layout_marginRight="0dp"
         android:layout_weight="10"
-        android:textColorLink="@color/colorPrimary"
+        android:textColorLink="@color/colorAccent"
         android:textSize="24sp" />
 
     <LinearLayout
